Added treebook code v8

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -4,3 +4,4 @@ glyphicons-halflings.png: glyphicons-halflings-f6675c325532ec11a984d58e172b8e2a.
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 application.js: application-104244b2b920d121fd8243f772bea78b.js
 application.css: application-7ecfbb36e2650a73acca9ceda1420aed.css
+bootstrap.css: bootstrap-9454768b7a51b2425160eab47a715ed5.css
