--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,9 +3,16 @@ Mam:
   last_name: "mim"
   email: "mam@treehouse.com"
   profile_name: "mami"
+  encrypted_password: $2a$10$Fh/Hm8RxDsuPTeBUr6864.GARlcmt7zF2WspaXGr3BIv2C27N.osq
 
 jim:
   first_name: "jim"
   last_name: "Hoskins"
   email: "jim@teamtreehouse.com"
   profile_name: "jimhoskins"
+
+blocked_friend:
+  first_name: 'Blocked'
+  last_name: 'Friend'
+  email: 'blocked@teamtreehouse.com'
+  profile_name: 'youblockedme'
